codepkg/objects/Closeout_Request__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Entity_Type__c</fullName>
        <formula>TEXT(Subrecipient__r.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorized Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalOES_ID__c</fullName>
        <formula>Subrecipient__r.OES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalOES ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>User remark or feedback on the record will be stored.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <formula>&apos;https://caloes.force.com&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Eligibility__c</fullName>
        <formula>TEXT(Incident__r.Cost_Share_Eligibility__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Share Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declaration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>TEXT( Subrecipient__r.Entity_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <formula>Subrecipient__r.Sub_Recipient_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIPS#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Name__c</fullName>
        <formula>Incident__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Closeout Requests</relationshipLabel>
        <relationshipName>Closeout_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSPO_Amount__c</fullName>
        <label>NSPO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSPO__c</fullName>
        <formula>IF(  NSPO_Amount__c  &gt; 0, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20) , &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSPU_Amount__c</fullName>
        <label>NSPU Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>This date would capture the Closeout Request Initiation Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeout_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_P_4_Document_Available__c</fullName>
        <description>it store the value yes or no while</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Signed P.4  Document Available</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Declaration_Number__c</fullName>
        <formula>Incident__r.State_Declaration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Declaration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending SR Claim</fullName>
                </value>
                <value>
                    <fullName>Closeout Request Finalized</fullName>
                </value>
                <value>
                    <fullName>Closeout on Hold</fullName>
                </value>
                <value>
                    <fullName>Closeout in Progress</fullName>
                </value>
                <value>
                    <fullName>Closeout Complete</fullName>
                </value>
                <value>
                    <fullName>Closeout Requested</fullName>
                    <isActive>false</isActive>
                    <label>Closeout Requested</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending insurance proceeds</fullName>
                </value>
                <value>
                    <fullName>Pending revised P.4</fullName>
                </value>
                <value>
                    <fullName>Pending Request for Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subrecipient_Names__c</fullName>
        <formula>Subrecipient__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subrecipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subrecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subrecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Closeout Requests</relationshipLabel>
        <relationshipName>Closeout_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Closeout Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closeout_Request</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_Request_Finalized</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout Request Finalized</value>
        </filters>
        <label>Closeout Request Finalized</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_Request_Finalized_PortalUser</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout Request Finalized</value>
        </filters>
        <label>Closeout Request Finalized</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_complete</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout Complete</value>
        </filters>
        <label>Closeout complete</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_complete_PortalUser</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout Complete</value>
        </filters>
        <label>Closeout complete</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_in_progress</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout in Progress</value>
        </filters>
        <label>Closeout in progress</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_in_progress_Portal_User</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout in Progress</value>
        </filters>
        <label>Closeout in progress</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_on_Hold</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout on Hold</value>
        </filters>
        <label>Closeout on Hold</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_on_Hold_PortalUser</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closeout on Hold</value>
        </filters>
        <label>Closeout on Hold</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Subrecipient_s_Claim</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SR Claim</value>
        </filters>
        <label>Pending Subrecipient&apos;s Claim</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Subrecipient_s_Claim_PortalUser</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Subrecipient_Names__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SR Claim</value>
        </filters>
        <label>Pending Subrecipient&apos;s Claim</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Closeout Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closeout Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>closeoutShare__c</fullName>
        <label>closeoutShare</label>
    </sharingReasons>
</CustomObject>